<resources>
    <string name="app_name">Get Freaky</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="BASE_URL_KEY">base</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_merge">Merge accounts</string>
    <string name="workout_title">Add Workouts</string>
    <string name="create_workout">Create Workout</string>
    <string name="do_workout">Do workout</string>
    <string name="empty_exercise_list">Add exercises</string>
    <string name="rest_time_default">Rest time</string>
    <string name="btnOk">Ok</string>
    <string name="btnCancel">Cancel</string>
    <string name="lblExerciseName">Name:</string>
    <string name="lblNumberOfSets">Number of sets:</string>
    <string name="workingSet_no">Sets:</string>
    <string name="weight">Weight (kg)</string>
    <string name="reps">Reps</string>
    <string name="saveSet">Save set</string>
    <string name="exit">Exit</string>
    <string name="set">Set</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noWorkoutResults">No results for this day</string>
    <string name="workoutResultHelp">(kg) x (reps)</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="bodyfat">Bodyfat (%)</string>
    <string name="chest">Chest</string>
    <string name="waist">Waist</string>
    <string name="arms">Arms</string>
    <string name="shoulders">Shoulders</string>
    <string name="forearms">Forearms</string>
    <string name="neck">Neck</string>
    <string name="hips">Hips</string>
    <string name="thighs">Thighs</string>
    <string name="calves">Calves</string>
    <string name="save">Save</string>
    <string name="google_server_client_id">184243885869-enlbqgos6p3t9fqujkh89squibv04ncu.apps.googleusercontent.com</string>
    <string name="facebook_app_id">767706113368797</string>
    <string name="merge_accounts">Merge Accounts</string>
    <string name="action_associate_email">Associate email and password</string>
    <string name="friends_label">Friends</string>
    <string name="menu_friends">Friends</string>
    <string name="add_by_email">Add by email</string>
    <string name="add_by_facebook">Add Facebook friends</string>
    <string name="select_friend_label">Select friend</string>
</resources>
