<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:stretchColumns="1"
    style="@style/AppTheme">

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:gravity="right"
            android:text="@string/lblExerciseName" />

        <EditText
            android:id="@+id/etExerciseName"
            android:width="200dp" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:gravity="right"
            android:text="@string/lblNumberOfSets" />

        <NumberPicker
            android:id="@+id/numberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/btnCreateExercise"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:gravity="right"
            android:text="@string/btnOk" />

        <Button
            android:id="@+id/btnCancelCreateExercise"
            android:layout_width="wrap_content"
            android:gravity="left"
            android:text="@string/btnCancel" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </TableRow>
</TableLayout>